--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,40 @@
 asn1crypto==0.24.0
+attrs==19.1.0
 bcrypt==3.1.6
+certifi==2019.3.9
 cffi==1.12.3
+chardet==3.0.4
 cryptography==2.6.1
 cycler==0.10.0
+decorator==4.4.0
 Django==2.2.1
+idna==2.8
+ipython-genutils==0.2.0
 joblib==0.13.2
+jsonschema==3.0.1
+jupyter-core==4.4.0
 kiwisolver==1.1.0
 matplotlib==3.0.3
 mysqlclient==1.4.2.post1
+nbformat==4.4.0
 numpy==1.16.3
+pandas==0.24.2
 paramiko==2.4.2
+pkg-resources==0.0.0
+plotly==3.9.0
 pyasn1==0.4.5
 pycparser==2.19
 PyNaCl==1.3.0
 pyparsing==2.4.0
+pyrsistent==0.15.2
 python-dateutil==2.8.0
 pytz==2019.1
-scikit-learn==0.21.1
+requests==2.22.0
+retrying==1.3.3
+scikit-learn==0.21.0
 scipy==1.2.1
 six==1.12.0
 sklearn==0.0
 sqlparse==0.3.0
+traitlets==4.3.2
+urllib3==1.25.3
