--- a/dsweb.ini
+++ b/dsweb.ini
@@ -1,5 +1,6 @@
 [uwsgi]
-http = 0.0.0.0:8000
+# http = 0.0.0.0:8000
+socket=0.0.0.0:8000
 chdir = /home/path/to/dsweb/
 # wsgi-file = dsweb/wsgi.py
 master=true
