--- a/dsweb_nginx.conf
+++ b/dsweb_nginx.conf
@@ -11,7 +11,7 @@ server{
     # the port your site will be served on
     listen 80;
     # the domain name it will serve for
-    server_name ai4chem.com; # substitute your machine's IP address or FQDN
+    server_name 0.0.0.0; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
@@ -23,12 +23,12 @@ server{
     }
 
     location /static {
-        alias /home/oysw/dsweb/static; # your Django project's static files - amend as required
+        alias /path/to/dsweb/static; # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /home/oysw/dsweb/uwsgi_params; # the uwsgi_params file you installed
+        include     /path/to/dsweb/uwsgi_params; # the uwsgi_params file you installed
     }
 }
