--- a/dsweb.ini
+++ b/dsweb.ini
@@ -6,4 +6,4 @@ chdir = /home/path/to/dsweb/
 master=true
 module=dsweb.wsgi
 stats = 0.0.0.0:9191
-static-map = /static/=static/
+# static-map = /static/=static/
