--- a/dsweb.ini
+++ b/dsweb.ini
@@ -1,9 +1,8 @@
 [uwsgi]
-# http = 0.0.0.0:8000
 socket=0.0.0.0:8000
 chdir = /home/path/to/dsweb/
-# wsgi-file = dsweb/wsgi.py
 master=true
 module=dsweb.wsgi
 stats = 0.0.0.0:9191
-# static-map = /static/=static/
+uid=root
+gid=root
