--- a/dsweb_nginx.conf
+++ b/dsweb_nginx.conf
@@ -29,6 +29,8 @@ server{
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
+        uwsgi_read_timeout 600s;
+        uwsgi_send_timeout 600s;
         include     /path/to/dsweb/uwsgi_params; # the uwsgi_params file you installed
     }
 }
