--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ chardet==3.0.4
 cryptography==2.7
 cycler==0.10.0
 decorator==4.4.0
-Django==2.2.1
+Django==2.2.2
 django-crontab==0.7.1
 future==0.17.1
 globus-nexus-client==0.2.8
@@ -18,7 +18,7 @@ joblib==0.13.2
 jsonschema==3.0.1
 jupyter-core==4.4.0
 kiwisolver==1.1.0
-matminer==0.5.6
+matminer==0.5.7
 matplotlib==3.1.0
 mdf-forge==0.7.1
 mdf-toolbox==0.4.6
@@ -31,12 +31,13 @@ numpy==1.16.4
 palettable==3.1.1
 pandas==0.24.2
 Pint==0.9
+pkg-resources==0.0.0
 plotly==3.10.0
-psutil==5.6.2
+psutil==5.6.3
 pycparser==2.19
 PyDispatcher==2.0.5
 PyJWT==1.7.1
-pymatgen==2019.5.28
+pymatgen==2019.6.5
 pymongo==3.8.0
 pyparsing==2.4.0
 pyrsistent==0.15.2
@@ -44,7 +45,7 @@ python-dateutil==2.8.0
 pytz==2019.1
 requests==2.22.0
 retrying==1.3.3
-ruamel.yaml==0.15.96
+ruamel.yaml==0.15.97
 scikit-learn==0.21.2
 scipy==1.3.0
 six==1.12.0
