--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ chardet==3.0.4
 cryptography==2.7
 cycler==0.10.0
 decorator==4.4.0
-Django==2.2.2
+Django==2.2.3
 django-celery-results==1.1.2
 future==0.17.1
 globus-nexus-client==0.2.8
@@ -23,9 +23,11 @@ jupyter-core==4.5.0
 kiwisolver==1.1.0
 kombu==4.6.3
 matminer==0.5.8
-matplotlib==3.1.0
+matplotlib==3.1.1
 mdf-forge==0.7.2
 mdf-toolbox==0.4.7
+mkl-fft==1.0.12
+mkl-random==1.0.2
 monty==2.0.4
 mpmath==1.1.0
 nbformat==4.4.0
@@ -38,7 +40,7 @@ plotly==3.10.0
 pycparser==2.19
 PyDispatcher==2.0.5
 PyJWT==1.7.1
-pymatgen==2019.6.20
+pymatgen==2019.7.2
 pymongo==3.8.0
 pyparsing==2.4.0
 pyrsistent==0.15.2
@@ -51,11 +53,12 @@ ruamel.yaml==0.15.97
 scikit-learn==0.21.2
 scipy==1.3.0
 six==1.12.0
-spglib==1.12.2.post0
+spglib==1.13.0.post6
 sqlparse==0.3.0
 sympy==1.4
 tabulate==0.8.3
 tqdm==4.32.2
 traitlets==4.3.2
 urllib3==1.25.3
+uWSGI==2.0.18
 vine==1.3.0
