--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea/
+.vscode/
 
 # CMake
 cmake-build-debug/
