--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,58 @@
-amqp==2.5.0
-asn1crypto==0.24.0
-attrs==19.1.0
-billiard==3.6.0.0
-celery==4.3.0
-certifi==2019.6.16
-cffi==1.12.3
+amqp==2.6.0
+asgiref==3.2.10
+attrs==19.3.0
+billiard==3.6.3.0
+celery==4.4.5
+certifi==2020.6.20
 chardet==3.0.4
-cryptography==2.7
+cloudpickle==1.4.1
 cycler==0.10.0
-decorator==4.4.0
-Django==2.2.3
-django-celery-results==1.1.2
-future==0.17.1
-globus-nexus-client==0.2.8
-globus-sdk==1.7.1
-hyperopt==0.1.2
-idna==2.8
-ipython-genutils==0.2.0
-joblib==0.13.2
-jsonschema==3.0.1
-jupyter-core==4.5.0
-kiwisolver==1.1.0
-kombu==4.6.3
-matminer==0.5.8
-matplotlib==3.1.1
-mdf-forge==0.7.2
-mdf-toolbox==0.4.7
-monty==2.0.4
+dataclasses==0.7
+decorator==4.4.2
+Django==3.0.7
+django-celery-results==1.2.1
+django-crontab==0.7.1
+future==0.18.2
+hyperopt==0.2.4
+idna==2.9
+importlib-metadata==1.6.1
+joblib==0.15.1
+jsonschema==3.2.0
+kiwisolver==1.2.0
+kombu==4.6.10
+matminer==0.6.3
+matplotlib==3.2.2
+monty==3.0.2
 mpmath==1.1.0
-nbformat==4.4.0
-networkx==2.3
-numpy==1.16.4
-palettable==3.1.1
-pandas==0.24.2
-Pint==0.9
-plotly==3.10.0
-pycparser==2.19
-PyDispatcher==2.0.5
-PyJWT==1.7.1
-pymatgen==2019.7.2
-pymongo==3.8.0
-pyparsing==2.4.0
-pyrsistent==0.15.2
-python-dateutil==2.8.0
-pytz==2019.1
-redis==3.2.1
-requests==2.22.0
+networkx==2.4
+numpy==1.19.0
+packaging==20.4
+palettable==3.3.0
+pandas==1.0.5
+Pint==0.13
+pkg-resources==0.0.0
+plotly==4.8.1
+pymatgen==2020.6.8
+pymongo==3.10.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+redis==3.5.3
+requests==2.24.0
 retrying==1.3.3
-ruamel.yaml==0.15.97
-scikit-learn==0.21.2
-scipy==1.3.0
-six==1.12.0
-sklearn==0.0
-spglib==1.13.0.post6
-sqlparse==0.3.0
-sympy==1.4
-tabulate==0.8.3
-tqdm==4.32.2
-traitlets==4.3.2
-urllib3==1.25.3
-uWSGI==2.0.18
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+scikit-learn==0.23.1
+scipy==1.5.0
+six==1.15.0
+spglib==1.15.1
+sqlparse==0.3.1
+sympy==1.6
+tabulate==0.8.7
+threadpoolctl==2.1.0
+tqdm==4.46.1
+urllib3==1.25.9
+uWSGI==2.0.19.1
 vine==1.3.0
+zipp==3.1.0
